// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessHoursSection matches snapshot with data 1`] = `
<DocumentFragment>
  <section>
    <h2
      class="text-2xl md:text-3xl font-bold border-b-2 border-red-600 pb-2 text-[#1a3c6e] dark:text-white"
    >
      Business Hours
    </h2>
    <div
      class="mt-4 md:mt-6 space-y-2 text-sm md:text-base text-gray-700 dark:text-gray-300"
    >
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Monday
        </span>
        <span>
          8:00 AM - 6:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Tuesday
        </span>
        <span>
          8:00 AM - 6:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Wednesday
        </span>
        <span>
          8:00 AM - 6:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Thursday
        </span>
        <span>
          8:00 AM - 8:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Friday
        </span>
        <span>
          8:00 AM - 6:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Saturday
        </span>
        <span>
          9:00 AM - 4:00 PM
        </span>
      </div>
      <div
        class="flex justify-between border-b py-2 border-gray-200 dark:border-gray-600"
      >
        <span>
          Sunday
        </span>
        <span>
          Closed
        </span>
      </div>
      <p
        class="mt-3 font-semibold text-red-600 dark:text-red-400"
      >
        24/7 Emergency Towing Available
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BusinessHoursSection matches snapshot with empty data 1`] = `
<DocumentFragment>
  <section>
    <h2
      class="text-2xl md:text-3xl font-bold border-b-2 border-red-600 pb-2 text-[#1a3c6e] dark:text-white"
    >
      Business Hours
    </h2>
    <div
      class="mt-4 md:mt-6 space-y-2 text-sm md:text-base text-gray-700 dark:text-gray-300"
    >
      <p
        class="mt-3 font-semibold text-red-600 dark:text-red-400"
      >
        24/7 Emergency Towing Available
      </p>
    </div>
  </section>
</DocumentFragment>
`;
